--- a/pgups/templates/pgups/results_teams.html
+++ b/pgups/templates/pgups/results_teams.html
@@ -1,14 +1,13 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% block content %}
-
 <div class="container">
-
 	<div class="heading">
-		<h1 class="bold">{{competition.name}} </h2>
-		<h2>Результаты по командам</h3>
+		<a href="{% url 'competition' competition_id=competition.id %}">
+			<h1 class="bold">{{competition.name}}</h1>
+		</a>
+		<h2>Результаты по командам</h2>
 	</div>
-
 	<div class="row">
 			<div class="col-lg-6 col-md-7 col-sm-8 col-xs-10">
 				<table class="result-tour-table table table-striped table-hover table-bordered">
@@ -24,6 +23,5 @@
 				</table>
 			</div>
 	</div>
-
 </div>
 {% endblock %}
