--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -1,44 +1,38 @@
 {% extends 'pgups/base.html' %}
 {% load staticfiles %}
 {% block content %}
-
 <div class="container">
-
 	<div class="heading">
-		<h1 class="bold">{{competition.name}} </h2>
-		<h2>Результаты по турам</h3>
+		<a href="{% url 'competition' competition_id=competition.id %}">
+			<h1 class="bold">{{competition.name}}</h1>
+		</a>
+		<h2>Результаты по турам</h2>
 	</div>
-
 	<!--<p class="note bold">* основная дистанция</p>-->
-
 	{% for result in results %}
-
 		{% if result.2|length > 0 or result.1|length > 0 %}
-
 			<div class="result-tour row">
-
 				<div class="result-tour-finished col-lg-7 col-md-7 col-sm-12 col-xs-12">
 					<h3>{{result.0}}</h3>
 					<table class="result-tour-table table table-hover table-bordered">
 						<tbody>
-								{% for c in result.1 %}
-									<tr>
-										<td class="result-tour-name">
+							{% for c in result.1 %}
+								<tr>
+									<td class="result-tour-name">
+									{% if c.main_distance%}<span class="bold">{% endif %}
+										{{c.person.last_name}} {{c.person.first_name}}
+									{% if c.main_distance%}</span>{% endif %}
+									</td>
+									<td class="result-tour-result">
 										{% if c.main_distance%}<span class="bold">{% endif %}
-											{{c.person.last_name}} {{c.person.first_name}}
+											{{c.result_set.all.0.time}}
 										{% if c.main_distance%}</span>{% endif %}
-										</td>
-										<td class="result-tour-result">
-											{% if c.main_distance%}<span class="bold">{% endif %}
-												{{c.result_set.all.0.time}}
-											{% if c.main_distance%}</span>{% endif %}
-										</td>
-									</tr>
-								{% endfor %}
+									</td>
+								</tr>
+							{% endfor %}
 						</tbody>
 					</table>
 				</div>
-
 				<div class="result-tour-skipped col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm 12 col-xs-12">
 					{%if result.2|length > 0 %}
 						<h4>Не вышли:</h4>
@@ -51,13 +45,8 @@
 						</ul>
 					{% endif %}
 				</div>
-
 			</div>
-
 		{% endif %}
-
 	{% endfor %}
-
 </div>
-
 {% endblock %}
