--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -5,7 +5,7 @@
 	<div class="result row">
 		<div class="single-cdsg-start-num">
 			<span class="start-num">Заплыв {{start_num}} ({{cdsg_name}})</span>
-			<a class="btn btn-info pull-right" href="../../all_starts/{{competition_id}}/">Все старты</a>
+			<a class="btn btn-info pull-right" href="../../starts/{{competition_id}}/">Все старты</a>
 		</div>
 		<table class="single-cdsg-table result-table table table-striped table-hover table-bordered">
 			<tbody>
@@ -20,6 +20,11 @@
 			</tbody>
 		</table>
 		<a class="btn btn-default pull-right" href="../../start_result/{{start_id}}/">Редактировать</a>
+		{% for message in messages %}
+			<!--<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>-->
+			<script src="{% static 'js/notie.js' %}"></script>
+			<script> notie.alert(1, 'Результат сохранён!', 0.5); </script> <!-- Notie -->
+		{% endfor %}
 	</div>
 	<div class="next-start row">
 	<hr>
