judequinn.1 hid edit results button from unauthenticated users, added table to tour template, fixed userrequest dates on competition page

--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -10,7 +10,8 @@
 		<ul class="list">
 			{% for userrequest in competition.userrequest_set.all %}
 				<li>
-					<a href="../../userrequest/{{userrequest.id}}/">{{userrequest.team}} : {{userrequest.date}}</a>
+					<a href="../../userrequest/{{userrequest.id}}/">{{userrequest.date|date:"d.m.Y"}}: {{userrequest.team}}
+					</a>
 				</li>
 			{% endfor %}
 		</ul>
