judequinn.1 added login status, fixed individual requests displayed as none, hid generate starts button from unauthenticated users, fixed dates on competition page

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -40,6 +40,10 @@ ul {
 .competition-menu {
   margin-bottom: 20px;
 }
+.navbar__login {
+  margin: 13px 0;
+  color: #777;
+}
 /* ---MEGAFORM--- */
 .form-horizontal .control-label.text-left {
   text-align: left;
