--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -24,6 +24,15 @@
 					<li><a href="{% url 'index' %}">Главная</a></li>
 					<li><a href="{% url 'regrequest' %}">Подать заявку</a></li>
 				</ul>
+				<div class="navbar__login pull-right">
+				<span>
+				{% if user.is_authenticated %}
+					Здравствуйте, {{user.username}}
+				{% else %}
+					Вы не залогинены
+				{% endif %}
+				</span>
+				</div>
 			</div>
 		</div>
 	</nav>
