judequinn.1 fixed a typo in main.js, added field values check on keyup

--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -77,7 +77,7 @@
 					<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-4 col-sm-5 col-xs-6 col-centered">
-						<button id="submit-request" type="submit" class="btn btn-warning btn-xxl" disabled>Отправить заявку</button>
+						<button id="submit-request" type="submit" class="btn btn-success btn-xxl" disabled>Отправить заявку</button>
 						{% if messages %}
 							{% for message in messages %}
 								<!--<br><h4{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</h4>-->
