--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -43,5 +43,7 @@
 		<div class="container">
 		</div>
 	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+	<script src="{% static 'js/validation-app.js' %}"></script>
 </body>
 </html>
